--- a/app/src/main/res/layout/activity_restaurant_register_account.xml
+++ b/app/src/main/res/layout/activity_restaurant_register_account.xml
@@ -71,7 +71,7 @@
             android:background="#efefef"
             android:baselineAligned="false"
             android:ems="10"
-            android:hint="admin_password"
+            android:hint="restaurant_password"
             android:inputType="textPassword"
             android:textColor="#444444"
             android:textColorHint="#777777" />
