--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f5e131"
-    tools:context=".Administrator">
+    tools:context=".Restaurant">
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
