--- a/app/src/main/res/layout/activity_restaurant_account_info_change.xml
+++ b/app/src/main/res/layout/activity_restaurant_account_info_change.xml
@@ -47,7 +47,7 @@
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
-            android:text="店舗検索"
+            android:text="アカウント"
             android:textSize="15sp" />
 
         <Button
@@ -58,7 +58,7 @@
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
-            android:text="利用者検索"
+            android:text="座席"
             android:textSize="15sp" />
 
         <Button
@@ -69,7 +69,7 @@
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
-            android:text="設定"
+            android:text="予約"
             android:textSize="15sp" />
     </LinearLayout>
 
