--- a/app/src/main/res/layout/activity_account_select.xml
+++ b/app/src/main/res/layout/activity_account_select.xml
@@ -31,6 +31,7 @@
             android:id="@+id/buttonHome"
             android:layout_width="0dip"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:layout_marginStart="1dp"
             android:layout_marginEnd="1dp"
             android:layout_weight="1"
@@ -73,72 +74,24 @@
             android:textSize="15sp" />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="323dp"
-        android:layout_height="616dp"
-        android:layout_marginTop="52dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <Button
+        android:id="@+id/buttonAccountInfoChange"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:backgroundTint="#eb4242"
+        android:text="アカウント情報変更"
+        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteY="166dp" />
 
-        <TextView
-            android:id="@+id/errorDisplay"
-            android:layout_width="match_parent"
-            android:layout_height="23dp"
-            android:layout_marginTop="50dp"
-            android:text="errorMessage"
-            android:textColor="#ff0000"
-            android:visibility="invisible" />
-
-        <EditText
-            android:id="@+id/textBoxUserName"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="5dp"
-            android:background="#efefef"
-            android:ems="10"
-            android:hint="ユーザーネーム"
-            android:inputType="textPersonName"
-            android:textColor="#444444"
-            android:textColorHint="#777777" />
-
-        <EditText
-            android:id="@+id/textBoxPassword"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="80dp"
-            android:background="#efefef"
-            android:baselineAligned="false"
-            android:ems="10"
-            android:hint="パスワード"
-            android:inputType="textPassword"
-            android:textColor="#444444"
-            android:textColorHint="#777777" />
-
-        <EditText
-            android:id="@+id/textBoxAdminPassword"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginTop="80dp"
-            android:background="#efefef"
-            android:baselineAligned="false"
-            android:ems="10"
-            android:hint="restaurant_password"
-            android:inputType="textPassword"
-            android:textColor="#444444"
-            android:textColorHint="#777777" />
-
-        <Button
-            android:id="@+id/buttonRegister"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:backgroundTint="#efefef"
-            android:text="変更"
-            android:textColor="#555555" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/buttonAccountInfoChange"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:backgroundTint="#eb4242"
+        android:text="休日情報管理"
+        tools:layout_editor_absoluteX="105dp"
+        tools:layout_editor_absoluteY="294dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
