--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -38,7 +38,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/buttonSearchRestaurant"
+            android:id="@+id/buttonAccount"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
@@ -49,7 +49,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/buttonSearchUser"
+            android:id="@+id/buttonSeat"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
@@ -60,7 +60,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/buttonSetting"
+            android:id="@+id/buttonReserve"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
