--- a/app/src/main/res/layout/activity_restaurant_account_info_change.xml
+++ b/app/src/main/res/layout/activity_restaurant_account_info_change.xml
@@ -40,7 +40,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/buttonSearchRestaurant"
+            android:id="@+id/buttonAccount"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
@@ -51,7 +51,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/buttonSearchUser"
+            android:id="@+id/buttonSeat"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
@@ -62,7 +62,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/buttonSetting"
+            android:id="@+id/buttonReserve"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
@@ -117,7 +117,7 @@
             android:textColorHint="#777777" />
 
         <EditText
-            android:id="@+id/textBoxAdminPassword"
+            android:id="@+id/textBoxRestaurantPassword"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="80dp"
@@ -130,7 +130,7 @@
             android:textColorHint="#777777" />
 
         <Button
-            android:id="@+id/buttonRegister"
+            android:id="@+id/buttonChange"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
