--- a/app/src/main/res/layout/activity_restaurant_holiday.xml
+++ b/app/src/main/res/layout/activity_restaurant_holiday.xml
@@ -72,8 +72,8 @@
     </LinearLayout>
 
     <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
+        android:id="@+id/calendar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="80dp" />
