--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -6,16 +6,6 @@
     android:layout_height="match_parent"
     android:background="#f5e131"
     tools:context=".Restaurant">
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textSize="30sp"
-        android:text="店舗HOME"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- bottom buttons -->
     <LinearLayout
@@ -42,6 +32,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
@@ -53,6 +44,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
@@ -64,12 +56,38 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
             android:text="予約"
             android:textSize="15sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="277dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="ようこそ！"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="292dp"
+        android:layout_marginLeft="292dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="#eb4242"
+        android:padding="0dp"
+        android:text="ログアウト"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
