--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -28,7 +28,7 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/buttonAccount"
+            android:id="@+id/buttonSetting"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
@@ -36,7 +36,7 @@
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
-            android:text="アカウント"
+            android:text="設定"
             android:textSize="15sp" />
 
         <Button
