--- a/app/src/main/res/layout/activity_restaurant_account_info_show.xml
+++ b/app/src/main/res/layout/activity_restaurant_account_info_show.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f5e131"
-    tools:context=".RestaurantAccountInfoChange">
+    tools:context=".RestaurantAccountInfoShow">
 
 
     <TextView
@@ -14,19 +14,20 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:text="アカウント情報変更"
+        android:layout_marginTop="16dp"
+        android:text="アカウント情報確認"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <LinearLayout
         android:layout_width="322dp"
         android:layout_height="match_parent"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="92dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -40,103 +41,63 @@
             android:visibility="invisible" />
 
         <TextView
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_marginTop="20dp"
-            android:text="ユーザネーム" />
-
-        <EditText
-            android:id="@+id/textBoxUserName"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="#efefef"
-            android:backgroundTint="#efefef"
-            android:paddingTop="3dp"
-            android:textSize="15dp" />
+            android:text="店名" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginTop="20dp"
-            android:text="誕生日" />
-
-        <EditText
-            android:id="@+id/textBoxUserBirthday"
+            android:id="@+id/textBoxRestaurantName"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:background="#efefef"
             android:backgroundTint="#efefef"
+            android:background="#efefef"
             android:paddingTop="3dp"
-            android:textSize="15dp" />
+            android:textSize="15dp"/>
+
+
 
         <TextView
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_marginTop="20dp"
-            android:text="性別" />
-
-        <EditText
-            android:id="@+id/textBoxUserGender"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="#efefef"
-            android:backgroundTint="#efefef"
-            android:paddingTop="3dp"
-            android:textSize="15dp" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:layout_marginTop="20dp"
             android:text="メールアドレス" />
 
-        <EditText
-            android:id="@+id/textBoxUserEmail"
+        <TextView
+            android:id="@+id/textBoxRestaurantEmail"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:background="#efefef"
             android:backgroundTint="#efefef"
+            android:background="#efefef"
             android:paddingTop="3dp"
             android:textSize="15dp" />
 
         <TextView
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:layout_marginTop="20dp"
             android:text="住所" />
 
-        <EditText
-            android:id="@+id/textBoxUserAddress"
+        <TextView
+            android:id="@+id/textBoxRestaurantAddress"
             android:layout_width="match_parent"
             android:layout_height="30dp"
-            android:background="#efefef"
             android:backgroundTint="#efefef"
+            android:background="#efefef"
             android:paddingTop="3dp"
-            android:textSize="15dp" />
+            android:textSize="15dp"/>
 
         <Button
-            android:id="@+id/buttonSubmit"
+            android:id="@+id/buttonAccountInfoChange"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_marginTop="60dp"
             android:backgroundTint="#efefef"
-            android:text="送信"
+            android:text="アカウント情報変更"
             android:textColor="#555555" />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonResign"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="292dp"
-        android:layout_marginLeft="292dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="#ff0000"
-        android:padding="0dp"
-        android:text="アカウント削除"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout></androidx.constraintlayout.widget.ConstraintLayout>
