--- a/app/src/main/res/layout/activity_restaurant_account_setting.xml
+++ b/app/src/main/res/layout/activity_restaurant_account_setting.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:textSize="30sp"
-        android:text="店舗アカウント情報管理"
+        android:text="設定"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,7 +31,6 @@
             android:id="@+id/buttonHome"
             android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:layout_gravity="center"
             android:layout_marginStart="1dp"
             android:layout_marginEnd="1dp"
             android:layout_weight="1"
@@ -41,14 +40,15 @@
             android:textSize="15sp" />
 
         <Button
-            android:id="@+id/buttonAccount"
+            android:id="@+id/buttonSetting"
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
-            android:text="アカウント"
+            android:text="設定"
             android:textSize="15sp" />
 
         <Button
@@ -56,6 +56,7 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
@@ -67,12 +68,26 @@
             android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_marginEnd="1dp"
+            android:layout_marginRight="1dp"
             android:layout_weight="1"
             android:backgroundTint="#eb4242"
             android:padding="0dp"
             android:text="予約"
             android:textSize="15sp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="277dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="16dp"
+        android:text="設定"
+        android:textSize="30sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <Button
         android:id="@+id/buttonAccountInfoChange"
