--- a/app/src/main/res/layout/activity_restaurant_account_setting.xml
+++ b/app/src/main/res/layout/activity_restaurant_account_setting.xml
@@ -76,37 +76,33 @@
             android:textSize="15sp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="277dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="設定"
-        android:textSize="30sp"
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="608dp"
+        android:layout_marginTop="62dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <Button
+            android:id="@+id/buttonAccountInfoShow"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="200dp"
+            android:backgroundTint="#eb4242"
+            android:text="アカウント情報変更" />
 
-    <Button
-        android:id="@+id/buttonAccountInfoChange"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:backgroundTint="#eb4242"
-        android:text="アカウント情報変更"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="166dp" />
-
-    <Button
-        android:id="@+id/buttonHoliday"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:backgroundTint="#eb4242"
-        android:text="休日情報管理"
-        tools:layout_editor_absoluteX="105dp"
-        tools:layout_editor_absoluteY="294dp" />
+        <Button
+            android:id="@+id/buttonHoliday"
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:backgroundTint="#eb4242"
+            android:text="休日情報管理" />
+    </LinearLayout>>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
