--- a/app/src/main/res/layout/activity_show_result.xml
+++ b/app/src/main/res/layout/activity_show_result.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:text="情報変更完了"
         android:textSize="30sp"
@@ -35,7 +35,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="150dp"
             android:text="メッセージ"
-            android:textAlignment="center"
+            android:layout_gravity="center_horizontal"
             android:textColor="#555555" />
 
         <Button
