--- a/app/src/main/res/layout/activity_restaurant_account_setting.xml
+++ b/app/src/main/res/layout/activity_restaurant_account_setting.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:textSize="30sp"
         android:text="設定"
