--- a/app/src/main/res/layout/activity_restaurant_register_account.xml
+++ b/app/src/main/res/layout/activity_restaurant_register_account.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:text="アカウント登録"
         android:textSize="30sp"
