--- a/app/src/main/res/layout/activity_restaurant_seat_show.xml
+++ b/app/src/main/res/layout/activity_restaurant_seat_show.xml
@@ -22,16 +22,30 @@
 
 
     <LinearLayout
-        android:layout_width="322dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="92dp"
+        android:paddingBottom="0dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
+        android:paddingTop="0dp"
         android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-
-
+        android:id="@+id/players_layout"
+        tools:context=".MainActivity">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+            <TableLayout
+                android:id="@+id/tablePlayers"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="0dp"
+                android:stretchColumns="*">
+            </TableLayout>
+        </ScrollView>
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
