--- a/app/src/main/res/layout/activity_restaurant_login.xml
+++ b/app/src/main/res/layout/activity_restaurant_login.xml
@@ -38,7 +38,7 @@
             android:visibility="invisible" />
 
         <EditText
-            android:id="@+id/textBoxUserName"
+            android:id="@+id/textBoxRestaurantName"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginTop="5dp"
