--- a/app/src/main/res/layout/activity_restaurant_account_info_change.xml
+++ b/app/src/main/res/layout/activity_restaurant_account_info_change.xml
@@ -54,6 +54,7 @@
             android:paddingTop="3dp"
             android:textSize="15dp" />
 
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="20dp"
@@ -84,12 +85,57 @@
             android:paddingTop="3dp"
             android:textSize="15dp" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:text="開店時間" />
+
+        <EditText
+            android:id="@+id/textBoxRestaurantTimeOpen"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="#efefef"
+            android:backgroundTint="#efefef"
+            android:paddingTop="3dp"
+            android:textSize="15dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:text="閉店時間" />
+
+        <EditText
+            android:id="@+id/textBoxRestaurantTimeColse"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="#efefef"
+            android:backgroundTint="#efefef"
+            android:paddingTop="3dp"
+            android:textSize="15dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:layout_marginTop="20dp"
+            android:text="店舗形態" />
+
+        <EditText
+            android:id="@+id/textBoxRestaurantFeatures"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:background="#efefef"
+            android:backgroundTint="#efefef"
+            android:paddingTop="3dp"
+            android:textSize="15dp" />
+
         <Button
             android:id="@+id/buttonSubmit"
             android:layout_width="200dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="50dp"
             android:backgroundTint="#efefef"
             android:text="送信"
             android:textColor="#555555" />
