--- a/app/src/main/res/layout/activity_restaurant_seat_show.xml
+++ b/app/src/main/res/layout/activity_restaurant_seat_show.xml
@@ -5,16 +5,222 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f5e131"
-    tools:context=".RestaurantSeatShow">
+    tools:context=".RestaurantAccountInfoShow">
 
-
-    <ListView
-        android:id="@+id/listView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:weightSum="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.1">
+
+            <TextView
+                android:id="@+id/textTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:text="座席情報確認"
+                android:textSize="30sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </LinearLayout>
+
+        <ScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.9">
+
+            <LinearLayout
+                android:layout_width="322dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="50dp"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.494"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/errorDisplay"
+                    android:layout_width="match_parent"
+                    android:layout_height="23dp"
+                    android:layout_marginTop="200dp"
+                    android:text="座席情報が取得できませんでした"
+                    android:textColor="#ff0000"
+                    android:visibility="invisible" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="座席ID" />
+
+                <TextView
+                    android:id="@+id/textBoxSeatId"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="座席名" />
+
+                <TextView
+                    android:id="@+id/textBoxSeatName"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="店舗ID" />
+
+                <TextView
+                    android:id="@+id/textBoxRestaurantId"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="着席可能人数" />
+
+                <TextView
+                    android:id="@+id/textBoxCapacity"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="使用状況" />
+
+                <TextView
+                    android:id="@+id/textBoxIsFilled"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="利用開始時間" />
+
+                <TextView
+                    android:id="@+id/textBoxTimeStart"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="利用時間" />
+
+                <TextView
+                    android:id="@+id/textBoxStayingTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="平均利用時間" />
+
+                <TextView
+                    android:id="@+id/textBoxAvgStayingTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="座席の種類" />
+
+                <TextView
+                    android:id="@+id/textBoxSeatFeature"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:background="#efefef"
+                    android:backgroundTint="#efefef"
+                    android:paddingTop="3dp"
+                    android:textSize="15dp" />
+
+                <Button
+                    android:id="@+id/buttonSeatInfoChange"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="50dp"
+                    android:backgroundTint="#efefef"
+                    android:text="座席情報変更"
+                    android:textColor="#555555" />
+
+                <Button
+                    android:id="@+id/buttonReservation"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginBottom="50dp"
+                    android:backgroundTint="#efefef"
+                    android:text="予約情報確認"
+                    android:textColor="#555555" />
+
+            </LinearLayout>
+
+        </ScrollView>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
