--- a/app/src/main/res/layout/activity_restaurant_calendar.xml
+++ b/app/src/main/res/layout/activity_restaurant_calendar.xml
@@ -36,6 +36,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/errorDisplay"
+            android:layout_width="match_parent"
+            android:layout_height="23dp"
+            android:layout_marginTop="20dp"
+            android:text="休日情報が取得出来ませんでした"
+            android:textColor="#ff0000"
+            android:visibility="invisible" />
+
         <Button
             android:id="@+id/buttonAccountAddHoliday"
             android:layout_width="200dp"
